--- a/industry-project-ecommerce/src/index.css
+++ b/industry-project-ecommerce/src/index.css
@@ -342,3 +342,8 @@ background-color: aquamarine;
   background-position: center;
   background-size: cover;
 }
+
+.cart-product-image{
+  width: 100%;
+  height: 250px;
+}
