--- a/industry-project-ecommerce/src/index.css
+++ b/industry-project-ecommerce/src/index.css
@@ -105,6 +105,10 @@ color:white;
   font-size: 1rem;
 }
 
+.cart-title{
+  font-size: 1.5rem;
+}
+
 body{
   font-size: 19px;
   background-color:#F7F4ED!important;
