--- a/industry-project-ecommerce/src/index.css
+++ b/industry-project-ecommerce/src/index.css
@@ -107,6 +107,7 @@ color:white;
 
 .cart-title{
   font-size: 1.5rem;
+  font-weight: 600;
 }
 
 body{
@@ -164,6 +165,15 @@ body{
 }
 .productInfo-dimension{
   color:#5F6368;
+}
+
+.cart-summary-tab{
+  border-color: #d9d9d9!important;
+  /* background-color: white; */
+  line-height: 2.1rem;
+}
+.cart-total{
+font-size: 2rem;
 }
 
 .productInfo-button{
@@ -349,5 +359,19 @@ background-color: aquamarine;
 
 .cart-product-image{
   width: 100%;
-  height: 250px;
+  height: 300px;
+  background-image: url("../images/RBC_meadow.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.cart-product-name {
+  font-size:1.5rem;
+  font-weight: 600;
+}
+
+.cart-item-delete
+{
+  right:0;
+  top:0;
 }
